# pokemon_scout_app

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: alembic.ini  app.py
app/commons/: config.py
app/libs/: pokemon_api_client.py  pokemon_api_sanitize.py  pokemon_api_sanitize_base.py  pokemon_db_client.py  pokemon_parser.py
app/libs/models/: pokemon.py  users.py
app/migrations/: env.py
app/migrations/versions/: 0a91dcf24da8_adding_form_table.py  1ce24b569cc5_adding_cry_table.py  1f98860cad25_pokemon_tables_with_foreign_keys.py  419370c64dcd_users_table.py  49d7ef6c483d_removing_move_detais_from_move_version_.py  502699fa3736_pre_production_tables.py  60049a23bb18_removing_unused_tables.py  8740d5781e93_removing_move_detais_from_move_learn_.py  b2f017249c2d_adding_form_table.py  b75df923ff37_pokemon_tables.py  bb9b977774bf_pokemon_tables.py  e7ba724e9f13_removing_pokemon_move_details_tbl.py
app/routes/: auth.py  pokemon.py
